Updates school search dropdown on small devices, resolves #76

--- a/src/styles/SchoolSearch.scss
+++ b/src/styles/SchoolSearch.scss
@@ -1,10 +1,3 @@
-// .search-autosuggest {
-//   display: none !important;
-//   .icon-search {
-//     display: none !important;
-//   }
-// }
-
 // @include media-breakpoint-up(md) {
 .search-autosuggest {
   display: flex; // block !important;
@@ -49,6 +42,7 @@
       top: 30px;
       z-index: 3000;
       background-color: transparent;
+      width: 100%;
       .react-autosuggest__suggestions-list {
         border: 1px solid #ddd;
         max-width: 300px;
@@ -61,7 +55,7 @@
           font-size: 15px;
           font-weight: 300;
           & > div {
-            width: 264px;
+            width: 100%; // 264px;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
@@ -79,7 +73,7 @@
 }
 
 .react-autosuggest__container--open {
-  max-width: 350px;
+  // max-width: 350px;
 }
 
 @media only screen and (min-width: 768px) {
